chore(config): endurecer envelope de runtime e contrato de idempotência
- IdempotencyFilter vira OncePerRequestFilter, cobre PATCH/DELETE e valida o
  formato da chave devolvendo 400 INVALID_IDEMPOTENCY_KEY em vez de aceitar
  chave arbitrária.
- RequestIdFilter ganha @Order(1) para que o requestId já exista na resposta de
  erro escrita pelo filtro de idempotência (@Order(2)).
- CORS: allowedHeaders passa a ser whitelist explícita, PATCH liberado e
  X-Request-Id exposto ao cliente.
- application.properties: pool Hikari, threads Tomcat, limites de multipart e
  limites do pipeline canônico de importação passam a ser explícitos e
  parametrizáveis por ambiente.
- docker-compose.vps.yml: mem_limit, cpus e JAVA_TOOL_OPTIONS com
  MaxRAMPercentage e ExitOnOutOfMemoryError.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_012f478ZexVxuL4TYeKFM2nV